RESOLVED FIXED232431
sticky th or td in table does not stops at specified top
https://bugs.webkit.org/show_bug.cgi?id=232431
Summary sticky th or td in table does not stops at specified top
Shun MIZUKAMI
Reported 2021-10-28 03:50:09 PDT
Created attachment 442689 [details] reproduce Reproduce: https://codepen.io/mizukami234/pen/PoKjRyq Actual Results: td cell stops at the top of scroll container Expected Behavior: td cell stops at the position specified by `top` from the top of scroll container
Attachments
reproduce (1.09 MB, video/mp4)
2021-10-28 03:50 PDT, Shun MIZUKAMI
no flags
Testcase (483 bytes, text/html)
2021-11-09 03:14 PST, Martin Robinson
no flags
Patch (24.71 KB, patch)
2021-12-01 01:06 PST, Martin Robinson
no flags
Radar WebKit Bug Importer
Comment 1 2021-11-04 03:51:17 PDT
Martin Robinson
Comment 2 2021-11-09 03:14:13 PST
Created attachment 443670 [details] Testcase
Martin Robinson
Comment 3 2021-11-09 03:15:07 PST
The issue here seems to be that m_frameRect of the table cell is not relative to its container for some reason, but to the table.
Martin Robinson
Comment 4 2021-11-30 08:21:52 PST
The issue here is that RenderTableCells have frame rects that are relative to the RenderTableSection, but their container is the RenderTableRow. I have a fix for this and hope to post it tomorrow.
Martin Robinson
Comment 5 2021-12-01 01:06:13 PST
EWS Watchlist
Comment 6 2021-12-01 01:07:16 PST
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see https://trac.webkit.org/wiki/WPTExportProcess
EWS
Comment 7 2021-12-02 00:18:28 PST
Committed r286417 (244763@main): <https://commits.webkit.org/244763@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 445540 [details].
Martin Robinson
Comment 8 2021-12-22 06:47:11 PST
*** Bug 233207 has been marked as a duplicate of this bug. ***
Brent Fulgham
Comment 9 2022-02-04 10:57:17 PST
This change should be present in STP 139, iOS 15.4 Beta, and macOS 12.3 Beta.
Note You need to log in before you can comment on or make changes to this bug.