sticky th or td in table does not stops at specified top https://bugs.webkit.org/show_bug.cgi?id=232431 <rdar://problem/85011818>

Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

Add new WPT tests that test the behavior of sticky <td> elements in the middle of
tables.

* web-platform-tests/css/css-position/sticky/position-sticky-table-td-bottom-expected.html: Added.
* web-platform-tests/css/css-position/sticky/position-sticky-table-td-bottom.html: Added.
* web-platform-tests/css/css-position/sticky/position-sticky-table-td-left-expected.html: Added.
* web-platform-tests/css/css-position/sticky/position-sticky-table-td-left.html: Added.
* web-platform-tests/css/css-position/sticky/position-sticky-table-td-right-expected.html: Added.
* web-platform-tests/css/css-position/sticky/position-sticky-table-td-right.html: Added.
* web-platform-tests/css/css-position/sticky/position-sticky-table-td-top-expected.html: Added.
* web-platform-tests/css/css-position/sticky/position-sticky-table-td-top.html: Added.

Source/WebCore:

Tests: imported/w3c/web-platform-tests/css/css-position/sticky/position-sticky-table-td-bottom.html
       imported/w3c/web-platform-tests/css/css-position/sticky/position-sticky-table-td-left.html
       imported/w3c/web-platform-tests/css/css-position/sticky/position-sticky-table-td-right.html
       imported/w3c/web-platform-tests/css/css-position/sticky/position-sticky-table-td-top.html

* rendering/RenderBox.h: Make frameRectForStickyPositioning not final.
* rendering/RenderTableCell.cpp:
(WebCore::RenderTableCell::frameRectForStickyPositioning const): Added this implementation
that takes into account that RenderTableCell is positioned relatively to the RenderTableSection.
* rendering/RenderTableCell.h: Added method declaration.



Canonical link: https://commits.webkit.org/244763@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286417 268f45cc-cd09-0410-ab3c-d52691b4dbfc